--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,10 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image: url('assets/images/subtle_dots/subtle_dots_@2X.png');">
   <div class="container-fluid">
     <app-root></app-root>
   </div>
-
 </body>
 
 </html>
