--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
 <body style="background-image: url('assets/images/subtle_dots/subtle_dots_@2X.png');">
   <div class="container-fluid">
-    <app-root></app-root>
+    <app-root>Loading...</app-root>
   </div>
 </body>
 
